# WZRD

./: .gitignore  01_darken_image.py  02_subtract_background.py  03_subtract_background_video.py  03_subtract_background_video_fast.py  04_crop_islands.py  CLAUDE.md  README.md  config.yaml  config_crop_islands.json  config_reproject.json  config_video_background_remove.json  pipeline.py  prompts.txt  prompts.yaml  pyproject.toml  run.py  test.py  utils.py
config/: config_img_darken.json  config_img_subtract.json
wzrd/: __init__.py  align.py  cli.py  config.py  darken.py  default_config.yaml  detect.py  islands.py  prepare_surface.py  reproject.py  simulate_view.py  subtract.py  subtract_frame.py  subtract_video.py  utils.py  video.py
wzrd/deprecated/: subtract.py  video.py
wzrd_mcp/: __init__.py  __main__.py  _log.py  auth.py  fal_tools.py  file_io.py  local_tools.py  modal_app.py  server.py  tools.py  tools_config.json  upload.py
wzrd_mcp/skills/: README.md
wzrd_mcp/skills/fullframe_animation/: prompt.md  skill.json
wzrd_mcp/skills/island_animation/: prompt.md  skill.json
wzrd_mcp/skills/surface_to_projection/: prompt.md  skill.json
