[project]
name = "wzrd"
version = "0.1.0"
description = "VJ projection mapping utilities - image/video processing for creature extraction"
authors = [{ name = "Xander Steenbrugge" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pillow>=10.0.0",
    "numpy>=2.2.0",
    "opencv-python>=4.8.0,<4.11.0",  # 4.11+ lacks wheels for newer macOS
]

[project.optional-dependencies]
# For color-region extraction (islands module uses KMeans)
islands = ["scikit-learn>=1.3.0"]
# MCP server layer
mcp = [
    "fastmcp>=3.0",
    "httpx>=0.27",
    "uvicorn>=0.30",
    "boto3>=1.34",
    "python-dotenv>=1.0",
    "modal>=0.73",
    "fal-client>=0.5",
]
modal = [
    "fastmcp>=3.0",
    "httpx>=0.27",
    "boto3>=1.34",
    "modal>=0.73",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["wzrd", "wzrd_mcp"]
